# Reading-Dificulty-Transformer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
app/: main.py
app/api/: routes.py
app/core/: config.py  differentiation_metadata.py  document_transformer.py  instructional_scoring.py  keyword_extractor.py  pdf_extractor.py  readability.py  reliability_assessment.py  report_generator.py  semantic_similarity.py
app/models/: schemas.py
app/services/: claude_client.py  forge_agent.py  ollama_client.py  readability.py  semantic.py  simplifier.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_differentiation_metadata.py  test_instructional_scoring.py  test_readability.py
